--- a/src/styling/css/style.css
+++ b/src/styling/css/style.css
@@ -1,3 +1,34 @@
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translate(-100px, 40px) rotate(15deg); }
+  65% {
+    transform: translate(10px, -2px) rotate(15deg); }
+  100% {
+    opacity: 1;
+    transform: translate(0, 0) rotate(0deg); } }
+
+@keyframes moveInRight {
+  0% {
+    opacity: 0.1;
+    transform: translate(100px, 40px); }
+  69% {
+    opacity: 0.4;
+    transform: translate(-10px, 6px); }
+  100% {
+    opacity: 1;
+    transform: translate(0, 0); } }
+
+@keyframes btnLoadAnimationFromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(100px); }
+  90% {
+    transform: translateY(-2px); }
+  100% {
+    transform: translateY(0px);
+    opacity: 1; } }
+
 /* universal selector for loading all elements same*/
 /* selecting also ::after because they are not counded with * elements */
 *,
@@ -44,9 +75,9 @@ body {
   position: relative;
   background-position: top;
   /* for creating desired shape
-    -starts from left-top corner to right-top...
-    -polygon(x y,x y....)
-  */
+      -starts from left-top corner to right-top...
+      -polygon(x y,x y....)
+    */
   /* or use clippy.com -> get shape from preset layouts */
   /* clip-path: polygon(0 0, 100% 50%, 0 100%); */
   clip-path: polygon(0 0, 100% 0, 100% 80vh, 4rem 100%, 0 100%); }
@@ -67,7 +98,7 @@ body {
     text-align: center; }
 
 .heading-primary {
-  color: #f5eef8;
+  color: #f2f0f0;
   text-transform: uppercase;
   text-align: center; }
   .heading-primary--main {
@@ -80,7 +111,7 @@ body {
     animation-duration: 1s; }
   .heading-primary--secondary {
     /* for removing some artefacts
-     backface-visibility: hidden; */
+       backface-visibility: hidden; */
     display: block;
     font-weight: 400;
     color: #d3d4d4;
@@ -90,37 +121,6 @@ body {
     animation-duration: 1s;
     margin-bottom: 60px;
     /* animation-timing-function: ease-out; */ }
-
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translate(-100px, 40px) rotate(15deg); }
-  65% {
-    transform: translate(10px, -2px) rotate(15deg); }
-  100% {
-    opacity: 1;
-    transform: translate(0, 0) rotate(0deg); } }
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0.1;
-    transform: translate(100px, 40px); }
-  69% {
-    opacity: 0.4;
-    transform: translate(-10px, 6px); }
-  100% {
-    opacity: 1;
-    transform: translate(0, 0); } }
-
-@keyframes btnLoadAnimationFromBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(100px); }
-  90% {
-    transform: translateY(-2px); }
-  100% {
-    transform: translateY(0px);
-    opacity: 1; } }
 
 .btn {
   /* pseudo classes ( like event in js ) -> those are 'something:link' for example  */
@@ -178,3 +178,28 @@ body {
     /* puts ::after element behind parent element */
     z-index: -1;
     transition: all 0.2s; }
+
+.row {
+  max-width: 114rem;
+  background-color: #777;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 20rem; }
+  .row [class^="col-"] {
+    margin-bottom: 20px;
+    border: darkviolet 1px solid; }
+  .row .col-1-2 {
+    width: calc((100% - 4rem) / 2);
+    background-color: coral;
+    float: left; }
+    .row .col-1-2:not(:last-child) {
+      margin-right: 4rem; }
+  .row .col-1-3 {
+    width: calc((100% - 2 * 4rem) / 3);
+    float: left; }
+    .row .col-1-3:not(:last-child) {
+      margin-right: 4rem; }
+  .row ::after {
+    content: "";
+    display: table;
+    clear: both; }
