--- a/src/styling/css/style.css
+++ b/src/styling/css/style.css
@@ -1,3 +1,15 @@
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-big {
+  margin-bottom: 8rem; }
+
+.u-margin-bottom-small {
+  margin-bottom: 2rem; }
+
+.u-margin-bottom-medium {
+  margin-bottom: 4.5rem; }
+
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -51,6 +63,7 @@
   }
 } */
 :root {
+  scroll-behavior: smooth;
   /* this also set default 'rem' value to 10px */
   /* so i could use everywhere in document rem value and it changes when i change default font-size */
   font-size: 62.5%; }
@@ -62,7 +75,20 @@ body {
   line-height: 1.4;
   box-sizing: border-box;
   color: #0e0e0e;
-  padding: 2rem; }
+  padding: 2rem;
+  background-color: #f2f0f0; }
+
+.u-center-text {
+  text-align: center; }
+
+.u-margin-bottom-big {
+  margin-bottom: 8rem; }
+
+.u-margin-bottom-small {
+  margin-bottom: 2rem; }
+
+.u-margin-bottom-medium {
+  margin-bottom: 4.5rem; }
 
 .header {
   height: 95vh;
@@ -122,6 +148,66 @@ body {
     margin-bottom: 60px;
     /* animation-timing-function: ease-out; */ }
 
+.section-about {
+  padding: 18rem 0 9rem 0;
+  margin-top: -20vh;
+  min-height: 35rem;
+  display: block; }
+
+.section-content {
+  transform: skewY(-5deg);
+  border-radius: 2rem;
+  background-clip: polygon();
+  background-image: linear-gradient(to right, #f2f0f0, rgba(224, 47, 145, 0.912), #ff0f0f);
+  z-index: -1;
+  padding: 15rem 2rem; }
+  .section-content > * {
+    transform: skewY(5deg); }
+
+.section-cards {
+  padding: 25rem 0 50rem 0;
+  background-image: linear-gradient(); }
+
+.row {
+  max-width: 114rem;
+  margin: auto; }
+  .row ::after {
+    content: "";
+    clear: both;
+    display: block; }
+  .row:not(:last-child) {
+    margin-bottom: 6rem; }
+  .row [class^="col-"] {
+    margin-bottom: 20px; }
+  .row .col-1-2 {
+    width: calc((100% - 4rem) / 2);
+    float: left; }
+    .row .col-1-2:not(:last-child) {
+      margin-right: 4rem; }
+  .row .col-1-3 {
+    width: calc((100% - 2 * 4rem) / 3);
+    float: left; }
+    .row .col-1-3:not(:last-child) {
+      margin-right: 4rem; }
+  .row .col-2-3 {
+    width: calc( ((100% - 4rem) / 3) * 2 + (4rem / 3));
+    float: left; }
+  .row .col-1-4 {
+    width: calc((100% - (3 * 4rem)) / 4);
+    float: left; }
+    .row .col-1-4:not(:last-child) {
+      margin-right: 4rem; }
+  .row .col-2-4 {
+    width: calc((100% - 4rem) / 2);
+    float: left; }
+    .row .col-2-4:not(:last-child) {
+      margin-right: 4rem; }
+  .row .col-3-4 {
+    width: calc( ((100% - 4rem) / 4 * 3) + 4rem / 2);
+    float: left; }
+    .row .col-3-4:not(:last-child) {
+      margin-right: 4rem; }
+
 .btn {
   /* pseudo classes ( like event in js ) -> those are 'something:link' for example  */
   /* this will setup after clicking on button / child of btn element */ }
@@ -179,27 +265,142 @@ body {
     z-index: -1;
     transition: all 0.2s; }
 
-.row {
-  max-width: 114rem;
-  background-color: #777;
-  margin: 0 auto; }
-  .row:not(:last-child) {
-    margin-bottom: 20rem; }
-  .row [class^="col-"] {
-    margin-bottom: 20px;
-    border: darkviolet 1px solid; }
-  .row .col-1-2 {
-    width: calc((100% - 4rem) / 2);
-    background-color: coral;
-    float: left; }
-    .row .col-1-2:not(:last-child) {
-      margin-right: 4rem; }
-  .row .col-1-3 {
-    width: calc((100% - 2 * 4rem) / 3);
-    float: left; }
-    .row .col-1-3:not(:last-child) {
-      margin-right: 4rem; }
-  .row ::after {
-    content: "";
-    display: table;
-    clear: both; }
+.btn-text {
+  text-align: center;
+  display: inline-block;
+  font-weight: 700;
+  font-size: 1.5rem;
+  text-decoration: none;
+  border-bottom: 1.5px solid #dc1010;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-top: 0.5rem;
+  padding-right: 1rem;
+  transition: 0.2s; }
+  .btn-text:link, .btn-text:visited {
+    color: #dc1010; }
+  .btn-text:hover {
+    background-color: #dc1010;
+    color: #f2f0f0;
+    box-shadow: 0px 8px 14px rgba(0, 0, 0, 0.3);
+    border-color: #dc1010;
+    transform: translateY(-2px); }
+  .btn-text:active {
+    color: #f2f0f0;
+    border-color: #a9023d;
+    transform: translateY(-1px); }
+
+.composition {
+  position: relative;
+  transition: all 0.3s; }
+  .composition__photo {
+    outline-offset: 1.5rem;
+    transition: all 0.3s;
+    height: 25rem;
+    position: absolute; }
+    .composition__photo--p3 {
+      right: 40%;
+      top: 5rem; }
+    .composition__photo--p2 {
+      left: 10%;
+      top: 5rem; }
+    .composition__photo--p1 {
+      right: 30%;
+      top: -1rem;
+      transform: rotate(12deg);
+      z-index: 0; }
+    .composition__photo:hover {
+      outline: 1rem solid #dc1010;
+      transform: scale(1.06);
+      z-index: 1; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.9); }
+
+.heading-secondary {
+  font-size: 4rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #d56d0c, red);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  transition: all 0.2s;
+  text-shadow: 0px 8px 10px rgba(14, 14, 14, 0.15); }
+  .heading-secondary:hover {
+    transform: translateY(-2px) scale(1.01);
+    text-shadow: 0px 9px 20px rgba(14, 14, 14, 0.3); }
+
+.heading-tertiary {
+  font-size: 2rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.paragraph {
+  font-weight: 300;
+  font-size: 1.6rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
+
+.feature-box {
+  background-color: rgba(126, 126, 126, 0.604);
+  border-radius: 0.5rem;
+  margin: 0.5rem;
+  display: block;
+  color: #f2f0f0;
+  box-shadow: 9px 0px 15px rgba(197, 196, 196, 0.289);
+  text-align: center;
+  transition: all 0.15s;
+  padding: 3rem 0.5rem; }
+  .feature-box__icon {
+    display: inline-block;
+    background-image: linear-gradient(45deg, #dc1010, #f2f0f0);
+    color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    font-size: 6rem;
+    padding-top: 1rem; }
+  .feature-box__text {
+    margin: 3rem 1rem;
+    font-size: 1.5rem; }
+  .feature-box:hover {
+    display: relative;
+    scale: 1.05;
+    top: 1rem;
+    right: 0.4rem;
+    z-index: 1;
+    box-shadow: rgba(121, 120, 120, 0.693); }
+
+.flipping-card {
+  perspective: 100rem;
+  -moz-perspective: 100rem;
+  position: relative;
+  height: 40rem;
+  overflow: hidden;
+  text-align: center; }
+  .flipping-card__heading {
+    content: "Ja jsem jirka";
+    font-size: 2rem; }
+  .flipping-card__center-image {
+    background-size: cover; }
+  .flipping-card__side {
+    overflow: hidden;
+    position: absolute;
+    border-radius: 0.5rem;
+    height: 20rem;
+    transition: all 0.3s ease;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden; }
+    .flipping-card__side--front {
+      background-color: red; }
+    .flipping-card__side--back {
+      background-color: blue;
+      transform: rotateY(180deg);
+      -moz-transform: rotateY(180deg); }
+  .flipping-card:hover .flipping-card__side--front {
+    transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg); }
+  .flipping-card:hover .flipping-card__side--back {
+    transform: rotateY(0deg); }
